# ubb-computer-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  Makefile  README.MD  README.md
src/: cube.rs  cube_shader.rs  main.cpp  main.rs  transform.rs
